--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -25,12 +25,14 @@
     "\n",
     "Within this markdown cell, copy the line of text you used to import the data from your Terminal. This way, future analysts will be able to repeat your process.\n",
     "\n",
-    "e.g.: Import the dataset with `YOUR IMPORT TEXT HERE`"
+    "e.g.: Import the dataset with `YOUR IMPORT TEXT HERE`\n",
+    "\n",
+    "Import Dataset text:            mongoimport --type json -d uk_food -c establishments --drop --jsonArray establishments.json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -42,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "59390c4a",
    "metadata": {},
    "outputs": [],
@@ -53,17 +55,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7f9ececa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['admin', 'carl_db', 'config', 'epa', 'local', 'met', 'uk_food']\n"
+     ]
+    }
+   ],
    "source": [
-    "# confirm that our new database was created\n"
+    "# confirm that our new database was created\n",
+    "print(mongo.list_database_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -74,37 +85,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ef1b89ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['establishments']\n"
+     ]
+    }
+   ],
    "source": [
-    "# review the collections in our new database\n"
+    "# review the collections in our new database\n",
+    "print(db.list_collection_names())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18ab463c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# review the collections in our new database\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6a0d92df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'AddressLine1': 'Walmer And Kingsdown Golf Club',\n",
+      " 'AddressLine2': 'The Leas',\n",
+      " 'AddressLine3': 'Kingsdown',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'Lovetocater',\n",
+      " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+      " 'BusinessTypeID': 1,\n",
+      " 'ChangesByServerID': 0,\n",
+      " 'Distance': 4587.792282474894,\n",
+      " 'FHRSID': 1273080,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000082753',\n",
+      " 'LocalAuthorityCode': '182',\n",
+      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
+      " 'LocalAuthorityName': 'Dover',\n",
+      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
+      " 'NewRatingPending': False,\n",
+      " 'Phone': '',\n",
+      " 'PostCode': 'CT14 8EP',\n",
+      " 'RatingDate': '2022-06-23T00:00:00',\n",
+      " 'RatingKey': 'fhrs_5_en-gb',\n",
+      " 'RatingValue': '5',\n",
+      " 'RightToReply': '',\n",
+      " 'SchemeType': 'FHRS',\n",
+      " '_id': ObjectId('6505e4436867238c2d056424'),\n",
+      " 'geocode': {'latitude': '51.1787284', 'longitude': '1.4032986'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1273080',\n",
+      "            'rel': 'self'}],\n",
+      " 'meta': {'dataSource': None,\n",
+      "          'extractDate': '0001-01-01T00:00:00',\n",
+      "          'itemCount': 0,\n",
+      "          'pageNumber': 0,\n",
+      "          'pageSize': 0,\n",
+      "          'returncode': None,\n",
+      "          'totalCount': 0,\n",
+      "          'totalPages': 0},\n",
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 5}}\n"
+     ]
+    }
+   ],
    "source": [
-    "# review a document in the establishments collection\n"
+    "# review a document in the establishments collection\n",
+    "\n",
+    "#use find_one() to show 1 document in coll.\n",
+    "pprint(db.establishments.find_one())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -339,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
