--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -187,32 +187,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a dictionary for the new restaurant data\n"
+    "# Create a dictionary for the new restaurant data\n",
+    "\n",
+    "# restaurant data is found in instructions for Mod12 homework, bootcampspot\n",
+    "\n",
+    "new_restaurant = {\n",
+    "    \"BusinessName\":\"Penang Flavours\",\n",
+    "    \"BusinessType\":\"Restaurant/Cafe/Canteen\",\n",
+    "    \"BusinessTypeID\":\"\",\n",
+    "    \"AddressLine1\":\"Penang Flavours\",\n",
+    "    \"AddressLine2\":\"146A Plumstead Rd\",\n",
+    "    \"AddressLine3\":\"London\",\n",
+    "    \"AddressLine4\":\"\",\n",
+    "    \"PostCode\":\"SE18 7DY\",\n",
+    "    \"Phone\":\"\",\n",
+    "    \"LocalAuthorityCode\":\"511\",\n",
+    "    \"LocalAuthorityName\":\"Greenwich\",\n",
+    "    \"LocalAuthorityWebSite\":\"http://www.royalgreenwich.gov.uk\",\n",
+    "    \"LocalAuthorityEmailAddress\":\"health@royalgreenwich.gov.uk\",\n",
+    "    \"scores\":{\n",
+    "        \"Hygiene\":\"\",\n",
+    "        \"Structural\":\"\",\n",
+    "        \"ConfidenceInManagement\":\"\"\n",
+    "    },\n",
+    "    \"SchemeType\":\"FHRS\",\n",
+    "    \"geocode\":{\n",
+    "        \"longitude\":\"0.08384000\",\n",
+    "        \"latitude\":\"51.49014200\"\n",
+    "    },\n",
+    "    \"RightToReply\":\"\",\n",
+    "    \"Distance\":4623.9723280747176,\n",
+    "    \"NewRatingPending\":True\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "a6e5cece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertOneResult at 0x1a5003a58a0>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Insert the new restaurant into the collection\n"
+    "# Insert the new restaurant into the collection\n",
+    "\n",
+    "# use insert_one() to insert into establishments collection\n",
+    "establishments.insert_one(new_restaurant)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "63bb10f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('6505f19f1b3cba8cc34661f5'),\n",
+       " 'BusinessName': 'Penang Flavours',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': '',\n",
+       " 'AddressLine1': 'Penang Flavours',\n",
+       " 'AddressLine2': '146A Plumstead Rd',\n",
+       " 'AddressLine3': 'London',\n",
+       " 'AddressLine4': '',\n",
+       " 'PostCode': 'SE18 7DY',\n",
+       " 'Phone': '',\n",
+       " 'LocalAuthorityCode': '511',\n",
+       " 'LocalAuthorityName': 'Greenwich',\n",
+       " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+       " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4623.972328074718,\n",
+       " 'NewRatingPending': True}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check that the new restaurant was inserted\n"
+    "# Check that the new restaurant was inserted\n",
+    "establishments.find_one({'BusinessName':'Penang Flavours'})"
    ]
   },
   {
@@ -225,12 +301,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "93c63829",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('6505e4436867238c2d056424'),\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': 1}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n"
+    "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
+    "query = {'BusinessType': 'Restaurant/Cafe/Canteen'}\n",
+    "fields = ['BusinessTypeID', 'BusinessType']\n",
+    "\n",
+    "establishments.find_one(query, fields)"
    ]
   },
   {
@@ -243,22 +336,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "7f599f3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x1a5003a62f0>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Update the new restaurant with the correct BusinessTypeID\n"
+    "# Update the new restaurant with the correct BusinessTypeID\n",
+    "\n",
+    "# I believe the above shows that there was no previous restaurant in \"Restaurant/Cafe/Canteen\"\n",
+    "# or that \"R/C/C\" ID was already \"1\", but this info was not in the inserted data.\n",
+    "\n",
+    "establishments.update_one(\n",
+    "    new_restaurant, \n",
+    "    {'$set': \n",
+    "        {'BusinessTypeID': 1}\n",
+    "    }\n",
+    ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a6ad16f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('6505f19f1b3cba8cc34661f5'),\n",
+       " 'BusinessName': 'Penang Flavours',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': 1,\n",
+       " 'AddressLine1': 'Penang Flavours',\n",
+       " 'AddressLine2': '146A Plumstead Rd',\n",
+       " 'AddressLine3': 'London',\n",
+       " 'AddressLine4': '',\n",
+       " 'PostCode': 'SE18 7DY',\n",
+       " 'Phone': '',\n",
+       " 'LocalAuthorityCode': '511',\n",
+       " 'LocalAuthorityName': 'Greenwich',\n",
+       " 'LocalAuthorityWebSite': 'http://www.royalgreenwich.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
+       " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4623.972328074718,\n",
+       " 'NewRatingPending': True}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Confirm that the new restaurant was updated\n"
+    "# Confirm that the new restaurant was updated\n",
+    "establishments.find_one({'BusinessName':'Penang Flavours'})"
    ]
   },
   {
