--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -112,32 +112,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'Walmer And Kingsdown Golf Club',\n",
-      " 'AddressLine2': 'The Leas',\n",
-      " 'AddressLine3': 'Kingsdown',\n",
+      "{'AddressLine1': 'East Cliff Pavilion',\n",
+      " 'AddressLine2': 'Wear Bay Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
       " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'Lovetocater',\n",
+      " 'BusinessName': 'The Pavilion',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.792282474894,\n",
-      " 'FHRSID': 1273080,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000082753',\n",
-      " 'LocalAuthorityCode': '182',\n",
-      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
-      " 'LocalAuthorityName': 'Dover',\n",
-      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
+      " 'Distance': 4591.765489457773,\n",
+      " 'FHRSID': 1043695,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT14 8EP',\n",
-      " 'RatingDate': '2022-06-23T00:00:00',\n",
+      " 'PostCode': 'CT19 6BL',\n",
+      " 'RatingDate': '2018-04-04T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': '5',\n",
+      " 'RatingValue': 5,\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6505e4436867238c2d056424'),\n",
-      " 'geocode': {'latitude': '51.1787284', 'longitude': '1.4032986'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1273080',\n",
+      " '_id': ObjectId('6505e4436867238c2d0566fb'),\n",
+      " 'geocode': {'latitude': Decimal128('51.0838120000000'),\n",
+      "             'longitude': Decimal128('1.19562500000000')},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -147,7 +148,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 5}}\n"
+      " 'scores': {'ConfidenceInManagement': 5, 'Hygiene': 5, 'Structural': 5}}\n"
      ]
     }
    ],
@@ -160,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
@@ -228,17 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x1a5003a58a0>"
+       "<pymongo.results.InsertOneResult at 0x228ca8d1000>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
@@ -262,7 +263,7 @@
        "{'_id': ObjectId('6505f19f1b3cba8cc34661f5'),\n",
        " 'BusinessName': 'Penang Flavours',\n",
        " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-       " 'BusinessTypeID': '',\n",
+       " 'BusinessTypeID': 1,\n",
        " 'AddressLine1': 'Penang Flavours',\n",
        " 'AddressLine2': '146A Plumstead Rd',\n",
        " 'AddressLine3': 'London',\n",
@@ -275,13 +276,15 @@
        " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
        " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'},\n",
+       " 'geocode': {'longitude': Decimal128('0.0838400000000000'),\n",
+       "  'latitude': Decimal128('51.4901420000000')},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4623.972328074718,\n",
-       " 'NewRatingPending': True}"
+       " 'NewRatingPending': True,\n",
+       " 'RatingValue': None}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,19 +304,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('6505e4436867238c2d056424'),\n",
+       "{'_id': ObjectId('6505e4436867238c2d0566fb'),\n",
        " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
        " 'BusinessTypeID': 1}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +324,7 @@
    "source": [
     "# Find the BusinessTypeID for \"Restaurant/Cafe/Canteen\" and return only the BusinessTypeID and BusinessType fields\n",
     "query = {'BusinessType': 'Restaurant/Cafe/Canteen'}\n",
-    "fields = ['BusinessTypeID', 'BusinessType']\n",
+    "fields = {'BusinessTypeID': 1, 'BusinessType': 1}\n",
     "\n",
     "establishments.find_one(query, fields)"
    ]
@@ -336,17 +339,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1a5003a62f0>"
+       "<pymongo.results.UpdateResult at 0x228c9847250>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
@@ -390,13 +393,15 @@
        " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
        " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': '0.08384000', 'latitude': '51.49014200'},\n",
+       " 'geocode': {'longitude': Decimal128('0.0838400000000000'),\n",
+       "  'latitude': Decimal128('51.4901420000000')},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4623.972328074718,\n",
-       " 'NewRatingPending': True}"
+       " 'NewRatingPending': True,\n",
+       " 'RatingValue': None}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,42 +421,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "768474a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Find how many documents have LocalAuthorityName as \"Dover\"\n"
+    "# Find how many documents have LocalAuthorityName as \"Dover\"\n",
+    "establishments.count_documents({'LocalAuthorityName': 'Dover'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "a11d5f1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.DeleteResult at 0x228ca8d2590>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Delete all documents where LocalAuthorityName is \"Dover\"\n"
+    "# Delete all documents where LocalAuthorityName is \"Dover\"\n",
+    "establishments.delete_many({'LocalAuthorityName': 'Dover'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2a51aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check if any remaining documents include Dover\n"
+    "# Check if any remaining documents include Dover\n",
+    "establishments.count_documents({'LocalAuthorityName': 'Dover'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "8c356f7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('6505e4436867238c2d0566fb'),\n",
+       " 'FHRSID': 1043695,\n",
+       " 'ChangesByServerID': 0,\n",
+       " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+       " 'BusinessName': 'The Pavilion',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': 1,\n",
+       " 'AddressLine1': 'East Cliff Pavilion',\n",
+       " 'AddressLine2': 'Wear Bay Road',\n",
+       " 'AddressLine3': 'Folkestone',\n",
+       " 'AddressLine4': 'Kent',\n",
+       " 'PostCode': 'CT19 6BL',\n",
+       " 'Phone': '',\n",
+       " 'RatingValue': 5,\n",
+       " 'RatingKey': 'fhrs_5_en-gb',\n",
+       " 'RatingDate': '2018-04-04T00:00:00',\n",
+       " 'LocalAuthorityCode': '188',\n",
+       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': Decimal128('1.19562500000000'),\n",
+       "  'latitude': Decimal128('51.0838120000000')},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4591.765489457773,\n",
+       " 'NewRatingPending': False,\n",
+       " 'meta': {'dataSource': None,\n",
+       "  'extractDate': '0001-01-01T00:00:00',\n",
+       "  'itemCount': 0,\n",
+       "  'returncode': None,\n",
+       "  'totalCount': 0,\n",
+       "  'totalPages': 0,\n",
+       "  'pageSize': 0,\n",
+       "  'pageNumber': 0},\n",
+       " 'links': [{'rel': 'self',\n",
+       "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check that other documents remain with 'find_one'\n"
+    "# Check that other documents remain with 'find_one'\n",
+    "establishments.find_one({})\n",
+    "\n",
+    "# Ah, this tells me that in step 3, 'Restaurant/Cafe/Canteen' was already assigned ID = 1, but was not in data given to insert\n"
    ]
   },
   {
@@ -474,12 +565,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "fd4112ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x228c99312d0>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Decimal for longitude and latitude\n"
+    "# Change the data type from String to Decimal for longitude and latitude\n",
+    "\n",
+    "#longitude and latitude are nested inside geocode\n",
+    "\n",
+    "establishments.update_many({}, [{'$set': {'geocode.longitude': {'$toDouble': '$geocode.longitude'}, \n",
+    "                                         'geocode.latitude': {'$toDouble': '$geocode.latitude'}\n",
+    "                                         }\n",
+    "                                }\n",
+    "                               ]\n",
+    "                          )"
    ]
   },
   {
@@ -493,10 +604,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "04430a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x228ca8d2470>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
@@ -505,22 +627,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "92524ccc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x228ca8d2a10>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Change the data type from String to Integer for RatingValue\n"
+    "# Change the data type from String to Integer for RatingValue\n",
+    "establishments.update_many({}, [{'$set':{ \"RatingValue\" : {'$toInt': \"$RatingValue\"}}}])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "0deacaf9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('6505e4436867238c2d0566fb'),\n",
+       " 'FHRSID': 1043695,\n",
+       " 'ChangesByServerID': 0,\n",
+       " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+       " 'BusinessName': 'The Pavilion',\n",
+       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
+       " 'BusinessTypeID': 1,\n",
+       " 'AddressLine1': 'East Cliff Pavilion',\n",
+       " 'AddressLine2': 'Wear Bay Road',\n",
+       " 'AddressLine3': 'Folkestone',\n",
+       " 'AddressLine4': 'Kent',\n",
+       " 'PostCode': 'CT19 6BL',\n",
+       " 'Phone': '',\n",
+       " 'RatingValue': 5,\n",
+       " 'RatingKey': 'fhrs_5_en-gb',\n",
+       " 'RatingDate': '2018-04-04T00:00:00',\n",
+       " 'LocalAuthorityCode': '188',\n",
+       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+       " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
+       " 'SchemeType': 'FHRS',\n",
+       " 'geocode': {'longitude': 1.195625, 'latitude': 51.083812},\n",
+       " 'RightToReply': '',\n",
+       " 'Distance': 4591.765489457773,\n",
+       " 'NewRatingPending': False,\n",
+       " 'meta': {'dataSource': None,\n",
+       "  'extractDate': '0001-01-01T00:00:00',\n",
+       "  'itemCount': 0,\n",
+       "  'returncode': None,\n",
+       "  'totalCount': 0,\n",
+       "  'totalPages': 0,\n",
+       "  'pageSize': 0,\n",
+       "  'pageNumber': 0},\n",
+       " 'links': [{'rel': 'self',\n",
+       "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Check that the coordinates and rating value are now numbers\n"
+    "# Check that the coordinates and rating value are now numbers\n",
+    "establishments.find_one()"
    ]
   }
  ],
