--- a/NoSQL_setup_starter.ipynb
+++ b/NoSQL_setup_starter.ipynb
@@ -136,8 +136,7 @@
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('6505e4436867238c2d0566fb'),\n",
-      " 'geocode': {'latitude': Decimal128('51.0838120000000'),\n",
-      "             'longitude': Decimal128('1.19562500000000')},\n",
+      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
@@ -236,7 +235,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x228ca8d1000>"
+       "<pymongo.results.InsertOneResult at 0x23285ad05e0>"
       ]
      },
      "execution_count": 9,
@@ -276,8 +275,7 @@
        " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
        " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': Decimal128('0.0838400000000000'),\n",
-       "  'latitude': Decimal128('51.4901420000000')},\n",
+       " 'geocode': {'longitude': 0.08384, 'latitude': 51.490142},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4623.972328074718,\n",
        " 'NewRatingPending': True,\n",
@@ -330,6 +328,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ab1e944",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "4e570caf",
    "metadata": {},
@@ -346,7 +352,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x228c9847250>"
+       "<pymongo.results.UpdateResult at 0x23286991120>"
       ]
      },
      "execution_count": 12,
@@ -393,8 +399,7 @@
        " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
        " 'scores': {'Hygiene': '', 'Structural': '', 'ConfidenceInManagement': ''},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': Decimal128('0.0838400000000000'),\n",
-       "  'latitude': Decimal128('51.4901420000000')},\n",
+       " 'geocode': {'longitude': 0.08384, 'latitude': 51.490142},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4623.972328074718,\n",
        " 'NewRatingPending': True,\n",
@@ -450,7 +455,7 @@
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x228ca8d2590>"
+       "<pymongo.results.DeleteResult at 0x23285c2b4c0>"
       ]
      },
      "execution_count": 15,
@@ -516,8 +521,7 @@
        " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
        " 'scores': {'Hygiene': 5, 'Structural': 5, 'ConfidenceInManagement': 5},\n",
        " 'SchemeType': 'FHRS',\n",
-       " 'geocode': {'longitude': Decimal128('1.19562500000000'),\n",
-       "  'latitude': Decimal128('51.0838120000000')},\n",
+       " 'geocode': {'longitude': 1.195625, 'latitude': 51.083812},\n",
        " 'RightToReply': '',\n",
        " 'Distance': 4591.765489457773,\n",
        " 'NewRatingPending': False,\n",
@@ -565,17 +569,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x228c99312d0>"
+       "<pymongo.results.UpdateResult at 0x23285ad07f0>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,17 +608,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "04430a5b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x228ca8d2470>"
+       "<pymongo.results.UpdateResult at 0x23286992d40>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,17 +631,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "92524ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x228ca8d2a10>"
+       "<pymongo.results.UpdateResult at 0x23285ad1390>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
@@ -694,7 +698,7 @@
        "   'href': 'https://api.ratings.food.gov.uk/establishments/1043695'}]}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
